--- a/style.css
+++ b/style.css
@@ -13,9 +13,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+body {
+  margin: 0;
+  padding: 80px 0;
+  display: flex;
+  justify-content: center;
+  min-height: 100vh;
+}
+
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  min-width: 600px;
 }
