--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ body {
   padding: 80px 0;
   display: flex;
   justify-content: center;
-  min-height: 100vh;
 }
 
 #app {
@@ -72,6 +71,12 @@ body {
       color: #9aa0a6;
     }
   }
+}
+
+#temperature-table-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
 }
 
 #temperature-table {
